--- a/css/sass.css
+++ b/css/sass.css
@@ -4,6 +4,24 @@
     src: url(../fonts/SF-UI-Text-Light.ttf);
     /* Путь к файлу со шрифтом */
 }
+
+.hidden{
+opacity:0;
+}
+.visible{
+opacity:1;
+}
+
+@keyframes fades {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
 body {
     display: -webkit-flex;
     /* Safari */
@@ -28,7 +46,6 @@ body {
     height: 100vh;
 }
 .header img {
-    flex-basis: auto;
     margin: 0;
 }
 .header h1 {
@@ -45,10 +62,11 @@ body {
     margin: 0;
 }
 .buttonMore {
+    align-self: flex-end;
     border-style: solid;
     border-width: 3px;
     border-color: #fff;
-    margin-top: 300px;
+    margin-bottom: 10px;
 }
 .header h2 {
     margin: 4px;
@@ -59,9 +77,26 @@ body {
 
 .render{
     margin: 0;
-    background-image: url(../img/Product_render_big.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+    display: flex;
     width: 100vw;
     height: 100vh;
+}
+
+
+.render img{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+#render-prod{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 0;
+}
+
+#img1, #img2, #img3, #img4, #img5, #img6, #img7 {
+  opacity: 0;
 }
