--- a/css/sass.css
+++ b/css/sass.css
@@ -33,7 +33,7 @@ body {
       align-items: center;
 }
 .header {
-    background-image: url(../img/bg.jpg);
+    background-image: url(../img/bg2.gif);
     background-size: cover;
     display: flex;
     -webkit-flex-direction: column;
@@ -46,6 +46,8 @@ body {
     height: 100vh;
 }
 .header img {
+    width: 100%;
+    height: auto;
     margin: 0;
 }
 .header h1 {
@@ -78,21 +80,22 @@ body {
 .render{
     margin: 0;
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: auto;
+    background-color: #F9F8F6;
 }
 
 
 .render img{
   width: 100%;
-  height: 100%;
+  height: auto;
   position: absolute;
   z-index: 1;
 }
 
 #render-prod{
   width: 100%;
-  height: 100%;
+  height: auto;
   position: absolute;
   z-index: 0;
 }
