--- a/css/sass.css
+++ b/css/sass.css
@@ -33,7 +33,6 @@ body {
       align-items: center;
 }
 .header {
-    background-image: url(../img/bg2.gif);
     background-size: cover;
     display: flex;
     -webkit-flex-direction: column;
@@ -44,6 +43,20 @@ body {
     align-items: center;
     width: 100vw;
     height: 100vh;
+}
+video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background: url('../img/bg.png') no-repeat;
+    background-size: cover;
+    transition: 1s opacity;
 }
 .header img {
     width: 100%;
