--- a/css/sass.css
+++ b/css/sass.css
@@ -94,7 +94,7 @@ video {
     margin: 0;
     display: flex;
     width: 100%;
-    height: auto;
+    height: 100%;
     background-color: #F9F8F6;
 }
 
